# AxC-Adders

./: .travis.yml  CMakeLists.txt  README.md
include/: InAx_adders.h  inexact_adders.h  inexact_adders_core.h
src/: AMA1_adder.cpp  AMA2_adder.cpp  AMA3_adder.cpp  AMA4_adder.cpp  AXA1_adder.cpp  AXA2_adder.cpp  AXA3_adder.cpp  CMakeLists.txt  InAx1_adder.cpp  InAx2_adder.cpp  InAx3_adder.cpp  InAx_adders.c  InAx_adders.cpp  InAx_adders.h
src/core/: ExactFullAdder.cpp  generic_adder.cpp
test/: CMakeLists.txt  test.cpp
test/AMA1_test/: AMA1_test.cpp  CMakeLists.txt
test/AMA2_test/: AMA2_test.cpp  CMakeLists.txt
test/AMA3_test/: AMA3_test.cpp  CMakeLists.txt
test/AMA4_test/: AMA4_test.cpp  CMakeLists.txt
test/AXA1_test/: AXA1_test.cpp  CMakeLists.txt
test/AXA2_test/: AXA2_test.cpp  CMakeLists.txt
test/AXA3_test/: AXA3_test.cpp  CMakeLists.txt
test/InAx1_test/: CMakeLists.txt  InAx1_test.cpp
test/InAx2_test/: CMakeLists.txt  InAx2_test.cpp
test/InAx3_test/: CMakeLists.txt  InAx3_test.cpp
test/inexactAdder_test/: CMakeLists.txt  inexactAdder_test.cpp
